--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- empty -->
 	</footer>
 	<script id="template" type="text/x-handlebars-template">
-		<li>
+		<li id-attribute="{{idAttribute}}">
 			{{toDo}}
 			<div class="action"><span class="check">&check;</span> <span class="cross">&cross;</span></div>
 		</li>
